<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_stamp">스탬프</string>
    <string name="title_setting_account">계정 관리</string>
    <string name="title_setting_other">기타</string>
    <string name="title_setting">설정</string>
    <string name="title_mypage_premium_lock">스탬프는 어떻게 모으나요?</string>

    <string name="content_stamp_count">누적 스탬프 %d</string>
    <string name="content_edit_profile">Edit profile</string>
    <string name="content_kakao_login">카카오 로그인</string>
    <string name="content_stamp_description_1">후기 남기고</string>
    <string name="content_stamp_description_2">스탬프를 채워 보세요</string>
    <string name="content_stamp_total_count">총 %d개</string>
    <string name="content_stamp_review_history">남긴 후기</string>
    <string name="content_filter_premium_lock">필터를 사용해보고 후기를 남기면 스탬프가 찍히고,\n일정 개수를 모으면 프리미엄 필터를 열람할 수 있어요.</string>
    <string name="content_filter_premium_lock_description_start">스탬프&#160;</string>
    <string name="content_filter_premium_lock_description_end">&#160;쌓이면 볼 수 있어요</string>
    <string name="content_filter_premium_lock_description">4개 이상</string>
    <string name="content_filter_premium_plus_lock_description">8개 이상</string>
    <string name="content_filter_navigate">필터값 보기</string>
    <string name="content_review_navigate">휴기 남기기</string>
    <string name="content_review_satisfactory">필터 만족도</string>
    <string name="content_delete">삭제</string>
    <string name="content_filter_artist">Made by %s</string>
    <string name="content_stamp_empty">후기 남기고\n스탬프를 채워 보세요</string>
    <string name="content_filter_history_empty">\'필터 보정값 보기\'를 눌러야\n열람 내역에 추가돼요</string>
    <string name="content_review_write">후기 남기러 가기</string>
    <string name="content_like_filter_empty">마음에 든 필터가 있다면\n찜 아이콘을 눌러 보세요</string>
    <string name="content_os_not_match">아이폰에서 확인할 수 있는 필터에요</string>
    <string name="content_success_update_profile">프로필 수정 완료</string>
    <string name="content_delete_review_success">삭제 완료</string>

    <string name="category_like">찜 목록</string>
    <string name="category_filter_history">필터 열람 내역</string>
    <string name="category_review_history">남긴 후기</string>
    <string name="category_account_info">계정 정보</string>
    <string name="category_edit_profile">프로필 편집</string>
    <string name="category_terms_of_service">이용약관</string>
    <string name="category_personal_info">개인정보 처리방침</string>
    <string name="category_app_version">버전 정보</string>
    <string name="category_logout">로그아웃</string>
    <string name="category_delete_account">탈퇴</string>
    <string name="category_join_type">가입 방법</string>
    <string name="category_email">이메일</string>
    <string name="category_join_date">가입일</string>
    <string name="category_gallery">사진첩에서 선택</string>
    <string name="category_deafult_img">기존 이미지로 변경</string>


</resources>