<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.cmc.purithm.feature.mypage.viewmodel.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100">

        <com.cmc.purithm.design.component.appbar.PurithmAppbar
            android:id="@+id/view_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_account_title"
            style="@style/kr_body_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="18dp"
            android:text="@string/title_setting_account"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar" />

        <TextView
            android:id="@+id/tv_account_info"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_account_info"
            app:delayClickEvent="@{() -> vm.clickAccountInfo()}"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toStartOf="@id/img_account_info_arrow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_title" />

        <ImageView
            android:id="@+id/img_account_info_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:src="@drawable/ic_arrow_right_grey"
            app:delayClickEvent="@{() -> vm.clickAccountInfo()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_account_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_account_info"
            app:layout_constraintTop_toTopOf="@id/tv_account_info" />

        <TextView
            android:id="@+id/tv_edit_profile"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_edit_profile"
            android:textColor="@color/grey_500"
            app:delayClickEvent="@{() -> vm.clickEditProfile()}"
            app:layout_constraintEnd_toStartOf="@id/img_edit_profile_arrow"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_info" />

        <ImageView
            android:id="@+id/img_edit_profile_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:src="@drawable/ic_arrow_right_grey"
            app:delayClickEvent="@{() -> vm.clickEditProfile()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_edit_profile"
            app:layout_constraintTop_toTopOf="@id/tv_edit_profile" />

        <View
            android:id="@+id/divider_account_info"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:background="@color/grey_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_profile" />

        <TextView
            android:id="@+id/tv_other_title"
            style="@style/kr_body_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="18dp"
            android:text="@string/title_setting_other"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_account_info" />

        <TextView
            android:id="@+id/tv_terms_of_service"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            app:delayClickEvent="@{() -> vm.clickTermsOfService()}"
            android:text="@string/category_terms_of_service"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toStartOf="@id/img_terms_of_service"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_other_title" />

        <ImageView
            android:id="@+id/img_terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:src="@drawable/ic_arrow_right_grey"
            app:delayClickEvent="@{() -> vm.clickTermsOfService()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_terms_of_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_terms_of_service"
            app:layout_constraintTop_toTopOf="@id/tv_terms_of_service" />

        <TextView
            android:id="@+id/tv_personal_info"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_personal_info"
            app:delayClickEvent="@{ () -> vm.clickPersonalInfo()}"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toStartOf="@id/img_personal_info"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_terms_of_service" />

        <ImageView
            android:id="@+id/img_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:src="@drawable/ic_arrow_right_grey"
            app:delayClickEvent="@{ () -> vm.clickPersonalInfo()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_personal_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_personal_info"
            app:layout_constraintTop_toTopOf="@id/tv_personal_info" />

        <TextView
            android:id="@+id/tv_version_info"
            style="@style/kr_body_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_app_version"
            android:textColor="@color/grey_500"
            app:layout_constraintEnd_toStartOf="@id/tv_version"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_personal_info" />

        <TextView
            android:id="@+id/tv_version"
            style="@style/kr_body_4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:gravity="center"
            android:textColor="@color/grey_300"
            app:layout_constraintBottom_toBottomOf="@id/tv_version_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_version_info"
            app:layout_constraintTop_toTopOf="@id/tv_version_info"
            tools:text="1.0" />

        <TextView
            android:id="@+id/tv_logout"
            style="@style/kr_body_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_logout"
            android:textColor="@color/grey_500"
            app:delayClickEvent="@{() -> vm.clickLogout()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_version_info" />

        <TextView
            android:id="@+id/tv_delete_account"
            style="@style/kr_body_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="15dp"
            android:paddingVertical="15dp"
            android:text="@string/category_delete_account"
            android:textColor="@color/grey_500"
            app:delayClickEvent="@{() -> vm.clickDeleteAccount()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>