<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.cmc.purithm.feature.mypage.model.AccountUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.cmc.purithm.design.component.appbar.PurithmAppbar
            android:id="@+id/view_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_join_type_title"
            style="@style/kr_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="30dp"
            android:text="@string/category_join_type"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar" />

        <LinearLayout
            android:id="@+id/layout_join_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/tv_join_type_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_join_type_title">

            <TextView
                android:id="@+id/tv_join_type"
                style="@style/kr_body_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/grey_400"
                app:socialText="@{data.joinType}"
                tools:text="카카오 로그인" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:socialImg="@{data.joinType}"
                tools:src="@drawable/ic_kakao" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_email_title"
            style="@style/kr_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="20dp"
            android:text="@string/category_email"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_join_type_title" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:gravity="end"
            android:text="@{data.email}"
            android:textColor="@color/grey_400"
            app:layout_constraintBottom_toBottomOf="@id/tv_email_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_email_title"
            app:layout_constraintTop_toTopOf="@id/tv_email_title"
            tools:text="rsw1452@naver.com" />

        <TextView
            android:id="@+id/tv_join_date_title"
            style="@style/kr_body_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_screen_side"
            android:layout_marginTop="20dp"
            android:text="@string/category_join_date"
            android:textColor="@color/grey_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

        <TextView
            android:id="@+id/tv_join_title"
            style="@style/kr_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="@dimen/margin_screen_side"
            android:gravity="end"
            android:textColor="@color/grey_400"
            app:date="@{data.joinDate}"
            app:layout_constraintBottom_toBottomOf="@id/tv_join_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_join_date_title"
            app:layout_constraintTop_toTopOf="@id/tv_join_date_title"
            tools:text="2024.07.09" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>