<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.cmc.purithm.feature.mypage.model.HistoryUiModel" />

        <variable
            name="vm"
            type="com.cmc.purithm.feature.mypage.viewmodel.StampHistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100">

        <com.cmc.purithm.design.component.appbar.PurithmAppbar
            android:id="@+id/view_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_empty_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{data.count == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar"
            app:layout_constraintVertical_bias="0.3">

            <ImageView
                android:layout_width="@dimen/size_empty_img"
                android:layout_height="@dimen/size_empty_img"
                android:layout_gravity="center"
                android:src="@drawable/ic_stamp_flower_unlock" />

            <TextView
                style="@style/kr_body_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/content_stamp_empty"
                android:textColor="@color/grey_400" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_review_write"
                style="@style/kr_body_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_solid_primary_s"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:text="@string/content_review_write"
                android:textColor="@color/white"
                app:delayClickEvent="@{() -> vm.clickFilterHistory()}" />

        </LinearLayout>

        <com.amar.library.ui.StickyScrollView
            android:id="@+id/scroll_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{data.count > 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_appbar"
            app:stickyHeader="@id/layout_stamp_description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_stamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/view_stamp_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp"
                        app:delayClickEvent="@{() -> vm.clickFilterHistory()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_stamp_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bg_stamp_background" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tv_stamp_description_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/pretendard_bold"
                        android:letterSpacing="-0.0285714285714286"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/content_stamp_description_1"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        app:layout_constraintBottom_toTopOf="@id/tv_stamp_description_2"
                        app:layout_constraintStart_toStartOf="@id/view_stamp_background"
                        app:layout_constraintTop_toTopOf="@id/view_stamp_background"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tv_stamp_description_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pretendard_bold"
                        android:letterSpacing="-0.0285714285714286"
                        android:lineSpacingExtra="10dp"
                        android:text="@string/content_stamp_description_2"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_stamp_description_1"
                        app:layout_constraintTop_toBottomOf="@id/tv_stamp_description_1" />

                    <ImageView
                        android:id="@+id/img_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrow_right_white"
                        app:layout_constraintBottom_toBottomOf="@id/tv_stamp_description_2"
                        app:layout_constraintEnd_toStartOf="@id/img_stamp"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toEndOf="@id/tv_stamp_description_2"
                        app:layout_constraintTop_toTopOf="@id/tv_stamp_description_2" />

                    <ImageView
                        android:id="@+id/img_stamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_screen_side"
                        android:src="@drawable/ic_stamp_flower_unlock"
                        app:layout_constraintBottom_toBottomOf="@id/view_stamp_background"
                        app:layout_constraintEnd_toEndOf="@id/view_stamp_background"
                        app:layout_constraintStart_toEndOf="@+id/img_arrow"
                        app:layout_constraintTop_toTopOf="@id/view_stamp_background" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/layout_stamp_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_100"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin_screen_side"
                    android:paddingVertical="21dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_stamp">

                    <TextView
                        android:id="@+id/tv_total_stamp_count"
                        style="@style/kr_body_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@{String.format(@string/content_stamp_total_count, data.count)}"
                        android:textColor="@color/grey_500"
                        tools:text="총 12개" />

                    <TextView
                        android:id="@+id/tv_premium_state"
                        style="@style/kr_body_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/grey_300"
                        app:stampCount2="@{data.count}"
                        tools:text="premium+까지 4개 남음" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_stamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_screen_side"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_stamp_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.amar.library.ui.StickyScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>